<?xml version="1.0"?>
<package format="2">
  <name>pal_navigation_cfg_bringup</name>
  <version>3.0.1</version>
  <description>Central storage of PAL Navigation launch files</description>
  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>
  <license>Proprietary</license>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
